Bug 1125047 - GMP should catch decoder failures. r=jesup, a=lmandel