media/webrtc/signaling/src/media-conduit/WebrtcGmpVideoCodec.cpp
@@ -506,7 +506,8 @@ WebrtcGmpVideoDecoder::WebrtcGmpVideoDecoder() :
   mGMP(nullptr),
   mHost(nullptr),
   mCallback(nullptr),
-  mCachedPluginId(0) {}
+  mCachedPluginId(0),
+  mDecoderStatus(GMPNoErr){}
 
 static void
 Decoder_Close_g(GMPVideoDecoderProxy* aGMP)
@@ -676,7 +677,10 @@ WebrtcGmpVideoDecoder::Decode_g(const webrtc::EncodedImage& aInputImage,
   if (NS_FAILED(rv)) {
     return WEBRTC_VIDEO_CODEC_ERROR;
   }
-
+  if(mDecoderStatus != GMPNoErr){
+    mDecoderStatus = GMPNoErr;
+    return WEBRTC_VIDEO_CODEC_ERROR;
+  }
   return WEBRTC_VIDEO_CODEC_OK;
 }
 
