media/webrtc/signaling/src/media-conduit/WebrtcGmpVideoCodec.h
@@ -147,6 +147,7 @@ public:
   }
 
   virtual void Error(GMPErr aError) MOZ_OVERRIDE {
+     mDecoderStatus = aError;
   }
 
 private:
@@ -165,6 +166,7 @@ private:
   GMPVideoHost* mHost;
   webrtc::DecodedImageCallback* mCallback;
   uint64_t mCachedPluginId;
+  GMPErr mDecoderStatus;
 };
 
 }
